# iotcli

./: .gitignore  CLAUDE.md  LICENSE  PRIVACY.md  README.md  pyproject.toml
.github/: labeler.yml
.github/workflows/: labeler.yml  publish.yml
src/iotcli/: __init__.py  __main__.py
src/iotcli/cli/: app.py  output.py
src/iotcli/cli/commands/: config.py  control.py  device.py  discover.py  serve.py  skills.py
src/iotcli/cloud/: __init__.py  tuya_cloud.py  xiaomi_cloud.py
src/iotcli/config/: __init__.py  credentials.py  manager.py
src/iotcli/core/: __init__.py  controller.py  device.py  exceptions.py  registry.py
src/iotcli/discovery/: __init__.py  scanner.py
src/iotcli/mcp/: __init__.py  resources.py  server.py  tools.py
src/iotcli/protocols/: __init__.py  base.py  http.py  lgac.py  miio.py  mqtt.py  tuya.py
src/iotcli/skills/: __init__.py  engine.py  generator.py
src/iotcli/skills/templates/: _base.yaml.j2  device_skill.md.j2  system_prompt.md.j2
src/iotcli/tui/: __init__.py  banner.py  interactive.py  mascot.py  panels.py  prompts.py  welcome.py  wizard.py
tests/: test_mcp.py
